Fix overlay z-index bug
Introduced during upgrade to spectre.css@0.2.9

--- a/app/quiz.css
+++ b/app/quiz.css
@@ -8,6 +8,10 @@ div.divider {
     margin-bottom: 2rem;
 }
 
+div.nav {
+    z-index: auto;
+}
+
 .nav-title {
     font-size: 2rem;
     height: 3.2rem;
